--- a/explore.html
+++ b/explore.html
@@ -6,141 +6,118 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore</title>
     <link rel="icon" href="logo.png">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Paytone+One&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">   
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="explore-body">
-    <nav>
-        <img src="logo.png" class="logo" alt="Logo" title="Travel Bug">
+</body>
 
-        <ul class="navbar">
-            <li>
-                <a href="#home">Home</a>
-                <a href="#destinations">Destinations</a>
-                <a href="#explore">Explore</a>
-                <a href="#blogs">Blogs</a>
-                <a href="#aboutus">About Us</a>
-                <a href="#contactus">Contact Us</a>
-            </li>
-        </ul>
-    </nav>
+    <section class="explore" id="explore">
+        <div class="explore-title">
+            <br>
+            <h2>EXPLORE</h2>
+            <br>
 
-    <div class="destination-detail" id="kashmir">
-    <h1>Kashmir</h1>
-    <div class="stars">
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-    </div>
+        </div>
+
+<div class="explore-content">
     
-    <div class="destination-img">
-        <img src="kashmir.jpg" alt="">
+    <div>
+    <a href="#spain" target="_blank"><div class="col-content">
+        <img src="spain (3).jpg" alt="spain">
+        <h5>Spain </h5>
+        <p>Barcelona</p>
+        </div></a>
+        <p>Barcelona captivates visitors 
+        <br>
+        with its unique blend of Gaudi architecture,
+        <br>
+        and beautiful Mediterranean beaches.</p>
     </div>
- </div>
-
- <div class="destination-detail" id="istanbul">
-    <h1>Istanbul</h1>
-    <div class="stars">
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star-half'></i></a>
+    <div>
+    <a href="#greece" target="_blank"><div class="col-content">
+        <img src="greece.jpg" alt="">
+        <h5>Santorini</h5>
+        <p>Greece</p>
+    </div></a>
+        <p>Santorini enchants travelers 
+        <br>
+        with its stunning villages, 
+        <br>
+        breathtaking sunsets and crystal sea views.</p>
+</div>
+<div>
+    <a href="#finland" target="_blank"><div class="col-content">
+        <img src="finland.jpg" alt="">
+        <h5>Turku</h5>
+        <p>Finland</p>
+    </div></a>
+    <p>Turku, Finland's oldest city, 
+        <br>
+        charms visitors with its historic architecture, 
+        <br>
+        and vibrant cultural scene.</p>
+</div>
+<div>
+    <a href="#thailand" target="_blank"><div class="col-content">
+        <img src="thailand.jpg" alt="">
+        <h5>Thailand</h5>
+        <p>Asia</p>
+    </div></a>
+    <p>Thailand entices visitors with 
+        <br>
+        its exotic beaches
+        <br>
+        making it popular among travellers.</p>
     </div>
-    <p>Istanbul, that offers unique historical and cultural riches together has hosted many different civilizations with its geography spread over two continents. This unique city which is admired by its charming nature and the attractive atmosphere is also the symbol of dynamic and modern city life. Istanbul has a multicultural texture and a lively atmosphere that melts the past and future in a single pot which provides a sense of universal history at every step.</p>
-    <div class="destination-img">
-        <img src="istanbul.jpg" alt="">
+    <div>
+    <a href="#warsaw" target="_blank"><div class="col-content">
+        <img src="warsaw.jpg" alt="">
+        <h5>Warsaw</h5>
+        <p>Poland</p>
+    </div></a>
+        <p>Warsaw, Poland's dynamic capital,
+        <br>
+        offers the visitors a blend of landmarks,
+        <br>
+        and eye-catching nightlife.</p>
     </div>
- </div>
-
- <div class="destination-detail" id="paris">
-    <h1>Paris</h1>
-    <div class="stars">
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star-half'></i></a>
+    <div>
+    <a href="#budapest" target="_blank"><div class="col-content">
+        <img src="budapest.png" alt="">
+        <h5>Budapest</h5>
+        <p>Hungary</p>
+    </div></a>
+    <p>Budapest, the stunning capital of Hungary,
+        <br>
+        captivates visitors with its architecture 
+        <br>
+        and relaxing thermal baths.</p>
     </div>
-    <p>Paris is a diverse and sophisticated city that appeals to the wealthy but can also be enjoyed on a budget. In addition to the Eiffel Tower, Paris has countless other gorgeous landmarks and monuments that add to the beauty of the spacious boulevards and their charming cafes. French cuisine is also world famous, and you can find some of the best of it in Paris. It has many stunning sights that showcase impressive architecture and design, and these places have become world-famous for their beauty.</p>
-    <div class="destination-img">
-        <img src="paris.jpg" alt="">
-    </div>
- </div>
-
- <div class="destination-detail" id="bali">
-    <h1>Bali</h1>
-    <div class="stars">
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star-half'></i></a>
-    </div>
-    <p>Bali's beauty goes way deeper than its beautiful appearances. Matching Bali's natural wonders are its ever-growing choice of awesome accommodations. From lavish resorts to affordable hostels, developers go all-out to create outstanding, well-equipped and enjoyable places to stay. Private villas can even be rented at unbelievably affordable prices. Many resorts and hotels have splendid swimming and infinity pools, most of which are attractions in themselves.</p>
-    <div class="destination-img">
-        <img src="bali.jpg" alt="">
-    </div>
- </div>
-
- <div class="destination-detail" id="dubai">
-    <h1>Dubai</h1>
-    <div class="stars">
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-    </div>
-    <p>Dubai is an ideal holiday destination for families, with theme parks, beaches, Friday brunches and more to keep everyone happy. The famous Burj Khalifa, the tallest building in the world, is well worth the entrance fee. Burj Al-Arab, often touted as the world's only 7-star hotel, remains underwhelming. Similarly, the Aquaventure Water Park at the Palms Atlantis Hotel is not to be missed. Jumeriah Beach Residence is well established as Dubai's most popular beachfront, and its close proximity to a whole host of restaurants, cafes and shops make it more than worthy of its status.</p>
-    <div class="destination-img">
-        <img src="dubai.jpg" alt="">
-    </div>
- </div>
-
- <div class="destination-detail" id="geneva">
-    <h1>Geneva</h1>
-    <div class="stars">
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star-half'></i></a>
-    </div>
-    <p>The charming city of Geneva comes with a plethora of attractions and tremendous natural beauty that makes every traveler fall in love with it. However, because of this overabundance of attractions, it becomes difficult for the backpackers to determine where to go first. Most of them generally miss out on all the best things that this fantastic city has to offer. The capital of Switzerland and a beautiful lakeside city, Geneva is home to many international organisations like the UN.</p>
-    <div class="destination-img">
-        <img src="switzerland.jpg" alt="">
-    </div>
- </div>
-
- <div class="destination-detail" id="port-blair">
-    <h1>Port Blair</h1>
-    <div class="stars">
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star-half'></i></a>
-    </div>
-    <p>Port Blair is an alluring destination for tourists as it includes a host of attractive locales. There are shimmering but clean beaches, beaches that defy the ferocity of sea and let tourists swim leisurely, relics of colonial power and oppression, many must-go museums, libraries, coral reefs, and more.</p>
-    <div class="destination-img">
-        <img src="portblair.jpg" alt="">
-    </div>
- </div>
-
- <div class="destination-detail" id="rome">
-    <h1>Rome</h1>
-    <div class="stars">
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-        <a href="#"><i class='bx bxs-star'></i></a>
-    </div>
-    <p>The capital of one of the most powerful ancient empires in the world, Rome is a fascinating place that has inspired people to visit for millennia. With incredible works of art, a leisurely pace of life and world-renowned cuisine, the Eternal City is worth a visit at least once, though it would take a lifetime to see all it has to offer.</p>
-    <div class="destination-img">
-        <img src="rome.jpg" alt="">
-    </div>
- </div>
-    </section>
+    <div>
+    <a href="#stockholm" target="_blank"><div class="col-content">
+        <img src="stockholm.jpg" alt="">
+        <h5>Stockholm</h5>
+        <p>Sweden</p>
+    </div></a>
+        <p>Stockholm, the elegant capital of Sweden,
+        <br>
+        mesmerizes visitors with its beautiful,
+        <br>
+        and innovative design scene.</p>
+</div>
+<div>
+    <a href="#london" target="_blank"><div class="col-content">
+        <img src="london.jpg" alt="">
+        <h5>London</h5>
+        <p>England</p>
+    </div></a>
+        <p>London,the vibrant capital of the UK, 
+        <br>
+        dazzles visitors with its museums,
+        <br>
+        and diverse cultural offerings.</p>
+</div>
+</div>
+</section>
 </body>
 </html>
