--- a/aboutus.html
+++ b/aboutus.html
@@ -23,6 +23,9 @@
             
             Know more about us by finding us on our socials or by contacting us!</p>
         <a href="https://www.instagram.com/nicole.camillerii/" class="connectbtn" target="_blank">Connect with us!</a>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/camillerinicole23" target="_blank"><i class='bx bxl-facebook'></i></a>
+            <a href="https://www.instagram.com/nicole.camillerii/ target="_blank"><i class='bx bxl-instagram' ></i></a>
     
     </div>
 </section>
